refactor some methods to re-use them and adding docs